...
                  ),
                ),
                ProjectSizedBox.heightMedium,
                ElevatedButton(
                  onPressed: viewModel.fetchUser,
                  child: Text(
                    'general.button.retry'.tr(),
                    style: Theme.of(context).textTheme.bodyMedium,
                  ),
                ),
              ],
            ),
          );
        }
        if (!viewModel.hasUser) {
          return Center(child: Text('profile.no_user_data'.tr()));
        }
        final user = viewModel.user!;
        return Container(
          color: Theme.of(context).colorScheme.surface,
          child: SingleChildScrollView(
            padding: ProjectPadding.symmetricSmall,
...
                              title: Text('dialogs.logout.title'.tr()),
                              content: Text('dialogs.logout.content'.tr()),
                              actions: [
                                TextButton(
                                  onPressed: () =>
                                      Navigator.of(context).pop(false),
                                  child: Text('general.button.cancel'.tr()),
                                ),
                                TextButton(
                                  onPressed: () =>
                                      Navigator.of(context).pop(true),
                                  child: Text('general.button.ok'.tr()),
                                ),
                              ],
                            ),
                          );

                          if (shouldLogout == true) {
...
                            valueColor: AlwaysStoppedAnimation<Color>(
                              Theme.of(context).colorScheme.onError,
                            ),
                          ),
                        )
                      : Text(
                          'general.button.logout'.tr(),
                          style: Theme.of(context).textTheme.bodyMedium,
                        ),
                ),
              ],
            ),
          ),
...
