...
              ),
              ProjectSizedBox.widthNormal,
              Expanded(
                child: ElevatedButton.icon(
                  onPressed: () => viewModel.updateUserFromControllers(),
                  icon: const Icon(Icons.save_rounded),
                  label: Text('general.button.save'.tr()),
                ),
              ),
            ],
          ),
        ],
      ),
...
